# shape.core

./: CMakeLists.txt  LICENSE  README.md  base.cc  base.hh  test.cc  type.hh
asset/: image.cc  image.hh  model.cc  model.hh  model_buffer.cc  model_buffer.hh  sound.cc  sound.hh
asset/reader/: model.cc  model.hh
asset/writer/: model.cc  model.hh
io/: reader.cc  reader.hh  writer.cc  writer.hh
lib/: CMakeLists.txt  asset_image.hh  asset_image_reader.cc  asset_image_reader.hh  asset_image_writer.cc  asset_image_writer.hh  asset_model.cc  asset_model.hh  asset_model_reader.cc  asset_model_reader.hh  asset_model_writer.cc  asset_model_writer.hh  asset_sound.hh  base.hh  base_camera.cc  base_camera.hh  base_component_dynamic.cc  base_component_dynamic.hh  base_image.cc  base_image.hh  base_image_bmp.cc  base_image_bmp.hh  base_image_tga.cc  base_image_tga.hh  base_model.cc  base_model.hh  base_model_obj.cc  base_model_obj.hh  base_reader.cc  base_reader.hh  base_stream.cc  base_stream.hh  base_writer.cc  base_writer.hh  math.hh  math_affine.hh  math_matrix.hh  math_quaternion.hh  math_simd_sse.hh  math_vector.hh  (+35 more)
math/: affine.hh  matrix.hh  off.inl  quaternion.hh  vector.hh
src/: CMakeLists.txt  asset_image.cc  asset_image.hh  asset_image_reader.cc  asset_image_reader.hh  asset_image_writer.cc  asset_image_writer.hh  asset_model.cc  asset_model.hh  asset_model_buffer.cc  asset_model_buffer.hh  asset_model_reader.cc  asset_model_reader.hh  asset_model_writer.cc  asset_model_writer.hh  asset_reader_model.cc  asset_reader_model.hh  asset_sound.cc  asset_writer_model.cc  asset_writer_model.hh  base.hh  component_camera.cc  component_camera.hh  io_reader.cc  io_reader.hh  io_writer.cc  io_writer.hh  math.hh  math_affine.hh  math_matrix.hh  math_quaternion.hh  math_vector.hh  type.hh  video_gl_base.hh  video_gl_base_device.cc  video_gl_base_device.hh  video_gl_base_framebuffer.cc  video_gl_base_framebuffer.hh  video_gl_base_shader_program.cc  video_gl_base_shader_textures.cc  (+11 more)
stream/: reader.cc  reader.hh  writer.cc  writer.hh
video/: base.hh  buffer.hh  device.hh  shader.hh  source.hh  target.hh
video/base/: device.cc  device.hh  framebuffer.cc  framebuffer.hh  shader.cc  shader.hh  shader_buffers.cc  shader_buffers.hh  shader_program.cc  shader_program.hh  shader_textures.cc  shader_textures.hh  texture.cc  texture.hh  vertex.cc  vertex.hh  vertex_buffer.cc  vertex_buffer.hh
video/components/: camera.cc  camera.hh
video/d3d11/: baseFrame.hh  baseModel.hh  baseModelIBuffer.hh  baseModelVBuffer.hh  baseParam.hh  baseProgram.hh  baseShader.hh  baseShaderParam.hh  baseState.hh  common.cc  common.hh
video/glad/: glad.c  glad.h
